<resources>
    <string name="app_name">Eshop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pune">pune</string>
    <string name="isquareit_pune">Isquareit_pune</string>
    <string name="best_offer">best_offer</string>
    <string name="see_all">see_all</string>
    <string name="home">Home</string>
    <string name="my_account">my_account</string>
    <string name="my_profile">my_profile</string>
    <string name="my_rewards">my_rewards</string>
    <string name="my_orders">my_orders</string>
    <string name="my_notifications">my_notifications</string>
    <string name="favourite_zone">Favourite_Zone</string>
</resources>